ft logging system into sandbox NOT Reagent (fix)

--- a/SandBox/SandBox.vcxproj
+++ b/SandBox/SandBox.vcxproj
@@ -61,7 +61,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>RG_WINDOWS;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)Reagent\src;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Reagent\src; $(SolutionDir)Reagent\src\Reagent;$(SolutionDir)Reagent\etc\spdlog\include;</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
