--- a/Reagent/Reagent.vcxproj.filters
+++ b/Reagent/Reagent.vcxproj.filters
@@ -1,42 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Reagent">
+      <UniqueIdentifier>{EB9A959E-577A-143A-6092-9F10CCF07A9B}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Reagent\Core.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Reagent.h" />
     <ClInclude Include="src\Reagent\Application.h">
-      <Filter>Header Files</Filter>
+      <Filter>Reagent</Filter>
     </ClInclude>
-    <ClInclude Include="src\Reagent.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="src\Reagent\Core.h">
+      <Filter>Reagent</Filter>
     </ClInclude>
     <ClInclude Include="src\Reagent\EntryPoint.h">
-      <Filter>Header Files</Filter>
+      <Filter>Reagent</Filter>
     </ClInclude>
     <ClInclude Include="src\Reagent\Log.h">
-      <Filter>Header Files</Filter>
+      <Filter>Reagent</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Reagent\Application.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Reagent</Filter>
     </ClCompile>
     <ClCompile Include="src\Reagent\Log.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Reagent</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
