--- a/Reagent/Reagent.vcxproj.filters
+++ b/Reagent/Reagent.vcxproj.filters
@@ -1,31 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Reagent">
-      <UniqueIdentifier>{EB9A959E-577A-143A-6092-9F10CCF07A9B}</UniqueIdentifier>
+    <Filter Include="Events">
+      <UniqueIdentifier>{3A8963B1-262B-8E87-0FE6-A1DBFB2615D8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Reagent.h" />
-    <ClInclude Include="src\Reagent\Application.h">
-      <Filter>Reagent</Filter>
+    <ClInclude Include="src\Reagent\Application.h" />
+    <ClInclude Include="src\Reagent\Core.h" />
+    <ClInclude Include="src\Reagent\EntryPoint.h" />
+    <ClInclude Include="src\Reagent\Events\ApplicationEvent.h">
+      <Filter>Events</Filter>
     </ClInclude>
-    <ClInclude Include="src\Reagent\Core.h">
-      <Filter>Reagent</Filter>
+    <ClInclude Include="src\Reagent\Events\Event.h">
+      <Filter>Events</Filter>
     </ClInclude>
-    <ClInclude Include="src\Reagent\EntryPoint.h">
-      <Filter>Reagent</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Reagent\Log.h">
-      <Filter>Reagent</Filter>
-    </ClInclude>
+    <ClInclude Include="src\Reagent\Log.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Reagent\Application.cpp">
-      <Filter>Reagent</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Reagent\Log.cpp">
-      <Filter>Reagent</Filter>
-    </ClCompile>
+    <ClCompile Include="src\Reagent\Application.cpp" />
+    <ClCompile Include="src\Reagent\Log.cpp" />
   </ItemGroup>
 </Project>
