--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Reagent/etc/spdlog"]
 	path = Reagent/etc/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Reagent/etc/GLFW"]
+	path = Reagent/etc/GLFW
+	url = https://github.com/Omar1Ramadan/glfw
