--- a/Reagent/Reagent.vcxproj
+++ b/Reagent/Reagent.vcxproj
@@ -80,7 +80,7 @@
       <PrecompiledHeaderFile>rgpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>RG_WINDOWS;RG_DLL;RG_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;etc\spdlog\include;$(VC_IncludePath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;src;..\src\Platform\Windows;etc\spdlog\include;$(VC_IncludePath);etc\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>rgpch.h</ForcedIncludeFiles>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
@@ -92,6 +92,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImportLibrary>..\bin\Debug-windows-x86_64\Reagent\Reagent.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
@@ -105,7 +106,7 @@ copy /B /Y ..\bin\Debug-windows-x86_64\Reagent\Reagent.dll ..\bin\Debug-windows-
       <PrecompiledHeaderFile>rgpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>RG_WINDOWS;RG_DLL;RG_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;etc\spdlog\include;$(VC_IncludePath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;src;..\src\Platform\Windows;etc\spdlog\include;$(VC_IncludePath);etc\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>rgpch.h</ForcedIncludeFiles>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -121,6 +122,7 @@ copy /B /Y ..\bin\Debug-windows-x86_64\Reagent\Reagent.dll ..\bin\Debug-windows-
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImportLibrary>..\bin\Release-windows-x86_64\Reagent\Reagent.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
@@ -134,7 +136,7 @@ copy /B /Y ..\bin\Release-windows-x86_64\Reagent\Reagent.dll ..\bin\Release-wind
       <PrecompiledHeaderFile>rgpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>RG_WINDOWS;RG_DLL;RG_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;etc\spdlog\include;$(VC_IncludePath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\src;src;..\src\Platform\Windows;etc\spdlog\include;$(VC_IncludePath);etc\GLFW\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ForcedIncludeFiles>rgpch.h</ForcedIncludeFiles>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -150,6 +152,7 @@ copy /B /Y ..\bin\Release-windows-x86_64\Reagent\Reagent.dll ..\bin\Release-wind
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ImportLibrary>..\bin\Dist-windows-x86_64\Reagent\Reagent.lib</ImportLibrary>
     </Link>
     <PostBuildEvent>
@@ -158,11 +161,15 @@ copy /B /Y ..\bin\Dist-windows-x86_64\Reagent\Reagent.dll ..\bin\Dist-windows-x8
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\Reagent.h" />
     <ClInclude Include="src\Reagent\Application.h" />
     <ClInclude Include="src\Reagent\Core.h" />
+    <ClInclude Include="src\Reagent\Core\Assert.h" />
     <ClInclude Include="src\Reagent\Core\KeyCode.h" />
     <ClInclude Include="src\Reagent\Core\MouseCode.h" />
+    <ClInclude Include="src\Reagent\Core\Window.h" />
+    <ClInclude Include="src\Reagent\Debug\AnalyzeExecution.h" />
     <ClInclude Include="src\Reagent\EntryPoint.h" />
     <ClInclude Include="src\Reagent\Events\ApplicationEvent.h" />
     <ClInclude Include="src\Reagent\Events\Event.h" />
@@ -172,11 +179,18 @@ copy /B /Y ..\bin\Dist-windows-x86_64\Reagent\Reagent.dll ..\bin\Dist-windows-x8
     <ClInclude Include="src\rgpch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\Reagent\Application.cpp" />
+    <ClCompile Include="src\Reagent\Core\Window.cpp" />
     <ClCompile Include="src\Reagent\Log.cpp" />
     <ClCompile Include="src\rgpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="etc\GLFW\GLFW.vcxproj">
+      <Project>{154B857C-0182-860D-AA6E-6C109684020F}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
