--- a/Reagent/Reagent.vcxproj.filters
+++ b/Reagent/Reagent.vcxproj.filters
@@ -1,17 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Reagent">
       <UniqueIdentifier>{EB9A959E-577A-143A-6092-9F10CCF07A9B}</UniqueIdentifier>
     </Filter>
     <Filter Include="Reagent\Core">
       <UniqueIdentifier>{234ACB65-0FAD-5A0A-B832-93C0A474268D}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Reagent\Debug">
+      <UniqueIdentifier>{A1E9401F-0DAA-BC55-D6E4-05D342640132}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Reagent\Events">
       <UniqueIdentifier>{6F70E80A-5B3E-DC10-44D2-4C37303FB875}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\Reagent.h" />
     <ClInclude Include="src\Reagent\Application.h">
       <Filter>Reagent</Filter>
@@ -19,11 +31,20 @@
     <ClInclude Include="src\Reagent\Core.h">
       <Filter>Reagent</Filter>
     </ClInclude>
+    <ClInclude Include="src\Reagent\Core\Assert.h">
+      <Filter>Reagent\Core</Filter>
+    </ClInclude>
     <ClInclude Include="src\Reagent\Core\KeyCode.h">
       <Filter>Reagent\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Reagent\Core\MouseCode.h">
       <Filter>Reagent\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Reagent\Core\Window.h">
+      <Filter>Reagent\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Reagent\Debug\AnalyzeExecution.h">
+      <Filter>Reagent\Debug</Filter>
     </ClInclude>
     <ClInclude Include="src\Reagent\EntryPoint.h">
       <Filter>Reagent</Filter>
@@ -46,8 +67,14 @@
     <ClInclude Include="src\rgpch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\Reagent\Application.cpp">
       <Filter>Reagent</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Reagent\Core\Window.cpp">
+      <Filter>Reagent\Core</Filter>
     </ClCompile>
     <ClCompile Include="src\Reagent\Log.cpp">
       <Filter>Reagent</Filter>
